--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="Img/FGO_London.jpg" alt="">
         <p class ="title">The Mist City: London</p>
        </div>
-    </div>   </div>
+    </div>  <p>adasadasdasdasdads</p> </div>
     
 </body>
 </html>
